Add images and text for home page

--- a/index.html
+++ b/index.html
@@ -61,58 +61,58 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/Astronaut2.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Aliquam</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<h3><a href="landing.html" class="link">Visual Art</a></h3>
+										<p>Artwork created with a message in mind</p>
+									</header>
+								</article>
+								<article class="product-branding">
+									<span class="image">
+										<img src="images/Nike-adapt-final-edit2_01.gif" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="landing.html" class="link">Product Branding</a></h3>
+										<p>Custom product rebrands in my style</p>
+									</header>
+								</article>
+								<article class="book-covers">
+									<span class="image">
+										<img src="images/kk.png" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="landing.html" class="link">Book Covers</a></h3>
+										<p>Book covers designed with the story in mind</p>
+									</header>
+								</article>
+								<article class="sports-edits">
+									<span class="image">
+										<img src="images/haye.png" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="landing.html" class="link">Sports Edits</a></h3>
+										<p>Visual edits for sporting brands</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/ie.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Tempus</a></h3>
-										<p>feugiat amet tempus</p>
+										<h3><a href="landing.html" class="link">Podcast</a></h3>
+										<p>A podcast i host and edit based on books</p>
 									</header>
 								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Magna</a></h3>
-										<p>Lorem etiam nullam</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Ipsum</a></h3>
-										<p>Nisl sed aliquam</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Consequat</a></h3>
-										<p>Ipsum dolor sit amet</p>
-									</header>
-								</article>
-								<article>
+								<!-- <article>
 									<span class="image">
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Etiam</a></h3>
+										<h3><a href="landing.html" class="link">Gallery</a></h3>
 										<p>Feugiat amet tempus</p>
 									</header>
-								</article>
+								</article> -->
 							</section>
 
 						<!-- Two -->
