Update contact and footer on home page

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 							</section>
 
 						<!-- Two -->
-							<section id="two">
+							<!-- <section id="two">
 								<div class="inner">
 									<header class="major">
 										<h2>Massa libero</h2>
@@ -126,14 +126,14 @@
 										<li><a href="landing.html" class="button next">Get Started</a></li>
 									</ul>
 								</div>
-							</section>
+							</section> -->
 
 					</div>
 
 				<!-- Contact -->
 					<section id="contact">
 						<div class="inner">
-							<section>
+							<!-- <section>
 								<form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
@@ -154,16 +154,23 @@
 										<li><input type="reset" value="Clear" /></li>
 									</ul>
 								</form>
-							</section>
-							<section class="split">
+							</section> -->
+							<!-- <section class="split"> -->
 								<section>
 									<div class="contact-method">
-										<span class="icon alt fa-envelope"></span>
-										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
+										<h3>Contact Me</h3>
 									</div>
+
+									<ul class="icons">
+										<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+										<!-- <li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li> -->
+										<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<!-- <li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li> -->
+										<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<li><span style="margin-right:20px;" class="icon alt fa-envelope"></span><a href="#">mohamed.imam@mivisuals.com</a></li>
+									</ul>
 								</section>
-								<section>
+								<!-- <section>
 									<div class="contact-method">
 										<span class="icon alt fa-phone"></span>
 										<h3>Phone</h3>
@@ -178,26 +185,19 @@
 										Nashville, TN 00000<br />
 										United States of America</span>
 									</div>
-								</section>
-							</section>
+								</section> -->
+							<!-- </section> -->
 						</div>
 					</section>
 
 				<!-- Footer -->
-					<footer id="footer">
+					<!-- <footer id="footer">
 						<div class="inner">
-							<ul class="icons">
-								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+								<li>&copy; MIVISUALS</li</a></li>
 							</ul>
 						</div>
-					</footer>
+					</footer> -->
 
 			</div>
 
