--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Forty by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Forty by HTML5 UP</title>
@@ -29,13 +24,11 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
-						</ul>
-						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
+							<li><a href="visual-art.html">Visual Art</a></li>
+							<li><a href="product-branding.html">Product Branding</a></li>
+							<li><a href="book-covers.html">Book Covers</a></li>
+							<li><a href="sports-edits.html">Sports Edits</a></li>
+							<li><a href="podcast.html">Podcast</a></li>
 						</ul>
 					</nav>
 
@@ -64,7 +57,7 @@
 										<img src="images/Astronaut2.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Visual Art</a></h3>
+										<h3><a href="visual-art.html" class="link">Visual Art</a></h3>
 										<p>Artwork created with a message in mind</p>
 									</header>
 								</article>
