--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 										<img src="images/Nike-adapt-final-edit2_01.gif" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Product Branding</a></h3>
+										<h3><a href="product-branding.html" class="link">Product Branding</a></h3>
 										<p>Custom product rebrands in my style</p>
 									</header>
 								</article>
