Add Book Covers page

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 										<img src="images/kk.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Book Covers</a></h3>
+										<h3><a href="book-covers.html" class="link">Book Covers</a></h3>
 										<p>Book covers designed with the story in mind</p>
 									</header>
 								</article>
