Add Sports Edits page

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 										<img src="images/haye.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Sports Edits</a></h3>
+										<h3><a href="sports-edits.html" class="link">Sports Edits</a></h3>
 										<p>Visual edits for sporting brands</p>
 									</header>
 								</article>
