Add Podcast page

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 										<img src="images/ie.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Podcast</a></h3>
+										<h3><a href="podcast.html" class="link">Podcast</a></h3>
 										<p>A podcast i host and edit based on books</p>
 									</header>
 								</article>
