Fix va homepage image

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/Astronaut2.png" alt="" />
+										<img src="images/va/Astronaut2.png" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="visual-art.html" class="link">Visual Art</a></h3>
