--- a/index.html
+++ b/index.html
@@ -124,64 +124,24 @@
 					</div>
 
 				<!-- Contact -->
-					<section id="contact">
-						<div class="inner">
-							<!-- <section>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="6"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Clear" /></li>
-									</ul>
-								</form>
-							</section> -->
-							<!-- <section class="split"> -->
-								<section>
-									<div class="contact-method">
-										<h3>Contact Me</h3>
-									</div>
+				<section id="contact">
+					<div class="inner">
+							<section style="width:100%; border:none;">
+								<div class="contact-method">
+									<h3>Contact Me</h3>
+								</div>
 
-									<ul class="icons">
-										<li><a href="https://twitter.com/MIVisuals" target="_blank" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-										<!-- <li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li> -->
-										<li><a href="https://instagram.com/m.i.visuals/" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-										<!-- <li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li> -->
-										<li><a href="https://www.linkedin.com/in/mohamed-imam-058b96117/" target="_blank" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-										<li><a style="margin-right:20px;" class="icon alt fa-envelope" href="mailto:mohamed.imam@mivisuals.com"></a><a href="mailto:mohamed.imam@mivisuals.com">mohamed.imam@mivisuals.com</a></li>
-									</ul>
-								</section>
-								<!-- <section>
-									<div class="contact-method">
-										<span class="icon alt fa-phone"></span>
-										<h3>Phone</h3>
-										<span>(000) 000-0000 x12387</span>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon alt fa-home"></span>
-										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
-										United States of America</span>
-									</div>
-								</section> -->
-							<!-- </section> -->
-						</div>
-					</section>
+								<ul class="icons">
+									<li><a href="https://twitter.com/MIVisuals" target="_blank" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+									<!-- <li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li> -->
+									<li><a href="https://instagram.com/m.i.visuals/" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+									<!-- <li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li> -->
+									<li><a href="https://www.linkedin.com/in/mohamed-imam-058b96117/" target="_blank" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a style="margin-right:20px;" class="icon alt fa-envelope" href="mailto:mohamed.imam@mivisuals.com"></a><a href="mailto:mohamed.imam@mivisuals.com">mohamed.imam@mivisuals.com</a></li>
+								</ul>
+							</section>
+					</div>
+				</section>
 
 				<!-- Footer -->
 					<!-- <footer id="footer">
