Update homepage with correct images and title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Forty by HTML5 UP</title>
+		<title>mivisuals | Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -72,7 +72,7 @@
 								</article>
 								<article class="book-covers">
 									<span class="image">
-										<img src="images/kk.png" alt="" />
+										<img src="images/KK.png" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="book-covers.html" class="link">Book Covers</a></h3>
@@ -81,7 +81,7 @@
 								</article>
 								<article class="sports-edits">
 									<span class="image">
-										<img src="images/haye.png" alt="" />
+										<img src="images/Haye.png" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="sports-edits.html" class="link">Sports Edits</a></h3>
@@ -90,7 +90,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/ie.png" alt="" />
+										<img src="images/IE.png" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="podcast.html" class="link">Podcast</a></h3>
