Homepage and visual art text updated

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Hi, my name is Mohamed</h1>
+								<h1>Hi - I'm Mohamed Imam, a graphic designer based in London</h1>
 							</header>
 							<div class="content">
-								<p>I'm a graphic designer and visual storyteller based in London, take a look at my portfolio and let's work together to tell your story.</p>
+								<p>Take a look at my portfolio and let's work together to tell your story.</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Get Started</a></li>
 								</ul>
@@ -58,7 +58,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="visual-art.html" class="link">Visual Art</a></h3>
-										<p>Artwork created with a message in mind</p>
+										<p>Artwork created with a message behind it</p>
 									</header>
 								</article>
 								<article class="product-branding">
@@ -94,7 +94,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="podcast.html" class="link">Podcast</a></h3>
-										<p>A podcast i host and edit based on books</p>
+										<p>A podcast based on reading a book a week that i co-host and edit</p>
 									</header>
 								</article>
 								<!-- <article>
