--- a/visual-art.html
+++ b/visual-art.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Visual Art | MIVISUALS</title>
+		<title>Visual Art | mivisuals</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -46,7 +46,7 @@
 									<header class="major">
 										<h1>Visual Art</h1>
 									</header>
-									<h3>These pieces were created to experiment and send a message visually. How do they make you feel?</h3>
+									<h3>These pieces were created with a message in mind. How do they make you feel?</h3>
 									<div class="box alt">
 										<div class="row gtr-50 gtr-uniform">
 											<div class="col-6">
@@ -56,7 +56,7 @@
 											</div>
 											<div class="col-6">
 												<span class="image fit"><img src="images/va/Samurai.jpg" alt="" /></span>
-												<p>Honour is not something to be forgotten. An edit designed for a friend of mine.</p>
+												<p>Honour is not something to be forgotten or understated.</p>
 												<span/>
 											</div>
 											<!-- Break -->
