Text edited on all pages

--- a/book-covers.html
+++ b/book-covers.html
@@ -67,7 +67,7 @@
                       </div>
                     </div>
                   </div>
-									<h3>Custom pieces of book cover art created to try and visualise my idea of the concept of my favourite books</h3>
+									<h3>Custom book cover art created to visualise my idea of the themes and concepts of my favourite books</h3>
 									<div class="box alt">
 										<div class="row gtr-50 gtr-uniform">
 											<div class="col-4">
