--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 								<h1>Hi - I'm Mohamed Imam, a graphic designer based in London</h1>
 							</header>
 							<div class="content">
-								<p>Take a look at my portfolio and let's work together to tell your story.</p>
+								<p>Take a look at my portfolio and let's work together to tell your story and build your brand.</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Get Started</a></li>
 								</ul>
