--- a/sports-edits.html
+++ b/sports-edits.html
@@ -41,7 +41,7 @@
 									<header class="major">
 										<h1>Sports Edits</h1>
 									</header>
-									<h4 style="margin-top:-15px;">For these pieces, I went in the direction of a trading card game style for these NBA 2019 All-Star edits to emphasise the ridiculous ability of these incredible athletes.</h4 style="margin-top: -15px;">
+									<h4 style="margin-top:-15px;">I went in the direction of a trading card game style for these NBA 2019 All-Star edits to emphasise the phenomenal ability of these incredible athletes.</h4 style="margin-top: -15px;">
                   <div class="box alt">
                     <div class="row gtr-50 gtr-uniform">
                       <div class="col-4">
