--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>mivisuals | Portfolio</title>
+		<title>My Portfolio | mivisuals</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -29,6 +29,7 @@
 							<li><a href="book-covers.html">Book Covers</a></li>
 							<li><a href="sports-edits.html">Sports Edits</a></li>
 							<li><a href="podcast.html">Podcast</a></li>
+							<li><a href="About me.html">About me</a></li>
 						</ul>
 					</nav>
 
