--- a/About me.html
+++ b/About me.html
@@ -29,6 +29,7 @@
 							<li><a href="book-covers.html">Book Covers</a></li>
 							<li><a href="sports-edits.html">Sports Edits</a></li>
 							<li><a href="podcast.html">Podcast</a></li>
+							<li><a href="About me.html">About me</a></li>
 						</ul>
 					</nav>
 
