Changed text in about me and index page

--- a/About me.html
+++ b/About me.html
@@ -40,7 +40,7 @@
 								<h1>About me</h1>
 							</header>
 							<div class="content">
-								<p>I am a graphic designer and visual editor who loves a good story and values making the client story and journey as enjoyable as possible.
+								<p>I am a graphic designer and visual editor who loves a good story and values making the client journey as enjoyable as possible.
                   I specialise in book covers, visual branding, posters, Sports edits and visual art.</p>
 
                   <p>  I also founded, co-host and edit the audio and visuals of the Inspyre Reads Podcast - A Podcast dedicated to inspiring growth and self development by reading a book a week and researching the themes arount the book and discussing as a group during the podcast</p>
