--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Hi - I'm Mohamed Imam, a graphic designer based in London</h1>
+								<h1>Hi, I'm Mohamed Imam, a graphic designer based in London</h1>
 							</header>
 							<div class="content">
 								<p>Take a look at my portfolio and let's work together to tell your story and build your brand.</p>
