--- a/index.html
+++ b/index.html
@@ -131,15 +131,19 @@
 								<div class="contact-method">
 									<h3>Contact Me</h3>
 								</div>
-
+<ul class="icons">
+		<!-- <li><a style="margin-right:20px;" class="icon alt fa-envelope" href="mailto:mohamed.imam@mivisuals.com"></a>
+	</ul> -->
+	<!-- <li><a href="mailto:mohamed.imam@mivisuals.com"></a>
+</ul> -->
 								<ul class="icons">
 									<li><a href="https://twitter.com/MIVisuals" target="_blank" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 									<!-- <li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li> -->
 									<li><a href="https://instagram.com/m.i.visuals/" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
 									<!-- <li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li> -->
 									<li><a href="https://www.linkedin.com/in/mohamed-imam-058b96117/" target="_blank" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a style="margin-right:20px;" class="icon alt fa-envelope" href="mailto:mohamed.imam@mivisuals.com"></a><a href="mailto:mohamed.imam@mivisuals.com">mohamed.imam@mivisuals.com</a></li>
-								</ul>
+									<li><a href="mailto:mohamed.imam@mivisuals.com">mohamed.imam@mivisuals.com</a></li>
+													</ul>
 							</section>
 					</div>
 				</section>
