--- a/product-branding.html
+++ b/product-branding.html
@@ -68,8 +68,8 @@
 										<li><a href="https://instagram.com/m.i.visuals/" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
 										<!-- <li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li> -->
 										<li><a href="https://www.linkedin.com/in/mohamed-imam-058b96117/" target="_blank" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-										<li><a style="margin-right:20px;" class="icon alt fa-envelope" href="mailto:mohamed.imam@mivisuals.com"></a><a href="mailto:mohamed.imam@mivisuals.com">mohamed.imam@mivisuals.com</a></li>
-									</ul>
+										<li><a href="mailto:mohamed.imam@mivisuals.com">mohamed.imam@mivisuals.com</a></li>
+														</ul>
 								</section>
 						</div>
 					</section>
