Updated with Contact page in nav and about-me fixed

--- a/Contact-me.html
+++ b/Contact-me.html
@@ -34,7 +34,8 @@
 						<li><a href="book-covers.html">Book Covers</a></li>
 						<li><a href="sports-edits.html">Sports Edits</a></li>
 						<li><a href="podcast.html">Podcast</a></li>
-						<li><a href="About me.html">About me</a></li>
+						<li><a href="About-me.html">About me</a></li>
+						<li><a href="Contact-me.html">About me</a></li>
 					</ul>
 				</nav>
 
