--- a/product-branding.html
+++ b/product-branding.html
@@ -30,7 +30,7 @@
 						<li><a href="sports-edits.html">Sports Edits</a></li>
 						<li><a href="podcast.html">Podcast</a></li>
 						<li><a href="About-me.html">About me</a></li>
-						<li><a href="Contact-me.html">About me</a></li>
+						<li><a href="Contact-me.html">Contact me</a></li>
 					</ul>
 				</nav>
 
