Update content me page

--- a/Contact-me.html
+++ b/Contact-me.html
@@ -38,28 +38,11 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>About me</h1>
+								<h1>Contact me</h1>
 							</header>
 							<div class="content">
-								<p>I am a graphic designer and visual editor who loves a good story and values making the client journey as enjoyable as possible.
-                  I specialise in book covers, visual branding, posters, Sports edits and visual art.</p>
-
-                  <p>  I also founded, co-host and edit the audio and visuals of the Inspyre Reads Podcast - A Podcast dedicated to inspiring growth and self development by reading a book a week and researching the themes arount the book and discussing as a group during the podcast</p>
-															</div>
-						</div>
-					</section>
-<div>
-                <span class="image main"><img src="me.png" alt="" /></span>
-</div>
-
-				<!-- Contact -->
-				<section id="contact">
-					<div class="inner">
-							<section style="width:100%; border:none;">
-								<div class="contact-method">
-									<h3>Contact Me</h3>
-								</div>
-
+								<p><h3> If you like my work and would like to work together, drop me an email or a message on one of my social media pages </h3> </p>
+								<p>
 								<ul class="icons">
 									<li><a href="https://twitter.com/MIVisuals" target="_blank" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 									<!-- <li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li> -->
@@ -67,7 +50,9 @@
 									<!-- <li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li> -->
 									<li><a href="https://www.linkedin.com/in/mohamed-imam-058b96117/" target="_blank" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="mailto:mohamed.imam@mivisuals.com">mohamed.imam@mivisuals.com</a></li>
+</p>
 													</ul>
+															</div>
 							</section>
 					</div>
 				</section>
