Typos fixed on all pages

--- a/book-covers.html
+++ b/book-covers.html
@@ -49,7 +49,7 @@
 										<h1>Book Covers</h1>
 									</header>
                   <h3>My first piece of professional client work.</h3>
-                  <h3>The idea behind this concept was that the author was on a spiritual journey and the figures in the piece symbolise that combined with the handwriting script i used to emphasise the title.</h3>
+                  <h3>The idea behind this concept was that the author was on a spiritual journey and the figures in the piece symbolise that journey. I also used a handwriting script to emphasise the title.</h3>
                   <div class="box alt">
                     <div class="row gtr-50 gtr-uniform">
                       <div class="col-4">
@@ -69,7 +69,7 @@
                       </div>
                     </div>
                   </div>
-									<h3>Custom book cover art created to visualise my idea of the themes and concepts of my favourite books</h3>
+									<h3>Custom book cover art created to visualise my perception of the themes and concepts of my favourite books</h3>
 									<div class="box alt">
 										<div class="row gtr-50 gtr-uniform">
 											<div class="col-4">
