--- a/About-me.html
+++ b/About-me.html
@@ -44,7 +44,7 @@
 								<p>I am a graphic designer and visual editor who loves a good story and values making the client journey as enjoyable as possible.
                   I specialise in book covers, visual branding, posters, Sports edits and visual art.</p>
 
-                  <p>  I also founded, co-host and edit the audio and visuals of the Inspyre Reads Podcast - A Podcast dedicated to inspiring growth and self development by reading a book a week and researching the themes arount the book and discussing as a group during the podcast</p>
+                  <p>  I also founded, co-host and edit the audio and visuals of the Inspyre Reads Podcast - A Podcast dedicated to inspiring growth and self development by reading a book a week and researching the themes around the book and holding group discussions during the podcast</p>
 															</div>
 						</div>
 					</section>
