--- a/visual-art.html
+++ b/visual-art.html
@@ -69,7 +69,7 @@
 											</div>
 											<div class="col-6">
 												<span class="image fit"><img src="images/va/blank-face.jpg" alt="" /></span>
-												<p>We feel safer when we’re hidden behind the mask of anonymity but sometimes safety is harmful.</p>
+												<p>We feel safer when we’re hidden behind a mask of anonymity but sometimes safety is harmful to progress.</p>
 												<span/>
 											</div>
 											<!-- Break -->
