book cover images capitalised

--- a/book-covers.html
+++ b/book-covers.html
@@ -73,17 +73,17 @@
 									<div class="box alt">
 										<div class="row gtr-50 gtr-uniform">
 											<div class="col-4">
-												<span class="image fit"><img src="images/bc/ffa.jpg" alt="" /></span>
+												<span class="image fit"><img src="images/bc/FFA.jpg" alt="" /></span>
 												<!-- <p>An ode to the child inside us that never had limits placed on their dreams.</p> -->
 												<!-- <span/> -->
 											</div>
 											<div class="col-4">
-												<span class="image fit"><img src="images/bc/holes.jpg" alt="" /></span>
+												<span class="image fit"><img src="images/bc/Holes.jpg" alt="" /></span>
 												<!-- <p>Honour is not something to be forgotten. An edit designed for a friend of mine.</p> -->
 												<!-- <span/> -->
 											</div>
                       <div class="col-4">
-                        <span class="image fit"><img src="images/bc/kk.jpg" alt="" /></span>
+                        <span class="image fit"><img src="images/bc/KK.jpg" alt="" /></span>
                         <!-- <p>Honour is not something to be forgotten. An edit designed for a friend of mine.</p> -->
                         <!-- <span/> -->
                       </div>
@@ -94,28 +94,28 @@
 												<!-- <span/> -->
 											</div>
 											<div class="col-4">
-												<span class="image fit"><img src="images/bc/slaa.jpg" alt="" /></span>
+												<span class="image fit"><img src="images/bc/Slaa.jpg" alt="" /></span>
 												<!-- <p>We feel safer when we’re hidden behind the mask of anonymity but sometimes safety is harmful.</p> -->
 												<!-- <span/> -->
 											</div>
                       <div class="col-4">
-                        <span class="image fit"><img src="images/bc/tbt.jpg" alt="" /></span>
+                        <span class="image fit"><img src="images/bc/TBT.jpg" alt="" /></span>
                         <!-- <p>Honour is not something to be forgotten. An edit designed for a friend of mine.</p> -->
                         <!-- <span/> -->
                       </div>
 											<!-- Break -->
 											<div class="col-4">
-												<span class="image fit"><img src="images/bc/tgg.jpg" alt="" /></span>
+												<span class="image fit"><img src="images/bc/TGG.jpg" alt="" /></span>
 												<!-- <p>I created this piece to be something that would calm a viewer down just by looking at it.</p> -->
 												<!-- <span/> -->
 											</div>
 											<div class="col-4">
-												<span class="image fit"><img src="images/bc/tkr.jpg" alt="" /></span>
+												<span class="image fit"><img src="images/bc/TKR.jpg" alt="" /></span>
 												<!-- <p>Take a break every now and then or you’ll be consumed by your on screen persona.</p> -->
 												<!-- <span/> -->
 											</div>
                       <div class="col-4">
-                        <span class="image fit"><img src="images/bc/wndr.jpg" alt="" /></span>
+                        <span class="image fit"><img src="images/bc/Wndr.jpg" alt="" /></span>
                         <!-- <p>Honour is not something to be forgotten. An edit designed for a friend of mine.</p> -->
                         <!-- <span/> -->
                       </div>
