Visual art text capitalised

--- a/visual-art.html
+++ b/visual-art.html
@@ -63,7 +63,7 @@
 											</div>
 											<!-- Break -->
 											<div class="col-6">
-												<span class="image fit"><img src="images/va/bf.jpg" alt="" /></span>
+												<span class="image fit"><img src="images/va/BF.jpg" alt="" /></span>
 												<p>Sometimes showing no expression can be a form of expression.</p>
 												<span/>
 											</div>
@@ -74,12 +74,12 @@
 											</div>
 											<!-- Break -->
 											<div class="col-6">
-												<span class="image fit"><img src="images/va/focus.jpg" alt="" /></span>
+												<span class="image fit"><img src="images/va/Focus.jpg" alt="" /></span>
 												<p>I created this piece to be something that would calm a viewer down just by looking at it.</p>
 												<span/>
 											</div>
 											<div class="col-6">
-												<span class="image fit"><img src="images/va/screen.jpg" alt="" /></span>
+												<span class="image fit"><img src="images/va/Screen.jpg" alt="" /></span>
 												<p>Take a break every now and then or you’ll be consumed by your on screen persona.</p>
 												<span/>
 											</div>
