--- a/visual-art.html
+++ b/visual-art.html
@@ -28,7 +28,7 @@
 				<!-- Menu -->
 				<nav id="menu">
 					<ul class="links">
-						<li><a href="index.html">Home</a></li>
+						<li><a href="Homepage.html">Home</a></li>
 						<li><a href="visual-art.html">Visual Art</a></li>
 						<li><a href="product-branding.html">Product Branding</a></li>
 						<li><a href="book-covers.html">Book Covers</a></li>
