--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="Homep.html">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li><a href="visual-art.html">Visual Art</a></li>
 							<li><a href="product-branding.html">Product Branding</a></li>
 							<li><a href="book-covers.html">Book Covers</a></li>
