Updated text on all pages

--- a/About-me.html
+++ b/About-me.html
@@ -42,15 +42,12 @@
 							</header>
 							<div class="content">
 								<p>I am a graphic designer and visual editor who loves a good story and values making the client journey as enjoyable as possible.
-                  I specialise in book covers, visual branding, posters, Sports edits and visual art.</p>
-
-                  <p>  I also founded, co-host and edit the audio and visuals of the Inspyre Reads Podcast - A Podcast dedicated to inspiring growth and self development by reading a book a week and researching the themes around the book and holding group discussions during the podcast</p>
+                  I specialise in Book Covers, Visual Branding, Posters, Sports edits and Visual Art.</p>
+                  <p>  I also founded, co-host and edit the audio and visuals of the Inspyre Reads Podcast - A Podcast dedicated to inspiring growth and self development by reading a book a week and researching the themes around the books and holding group discussions during the podcast</p>
 															</div>
 						</div>
 					</section>
-<div>
-                <span class="image main"><img src="me.png" alt="" /></span>
-</div>
+
 
 				<!-- Contact -->
 				<section id="contact">
