--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="podcast.html" class="link">Podcast</a></h3>
-										<p>A podcast based on reading a book a week that i co-host and edit</p>
+										<p>A podcast based on reading a book a week that I co-host and edit</p>
 									</header>
 								</article>
 								<!-- <article>
