--- a/podcast.html
+++ b/podcast.html
@@ -45,7 +45,7 @@
 									</header>
 									<h4>I co-host and edit the large majority of content related to the Inspyre Reads Podcast. If you need any audio or video editing done for your podcast, as an experienced podcaster and editor, i’d love to assist you with your content.</h4>
                   <span style="display: block; margin-top: 20px; margin-bottom: 20px;"><iframe width="100%" height="400" src="https://www.youtube.com/embed/4Uc8uWD_OQo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span>
-                  <h4>Myself and a group of friends created the Podcast in the hope that we’d inspire people to seek knowledge and better themselves in an entertaining way and we currently have over 45 episodes and over 30,000 listens.</h4>
+                  <h4>Myself and a group of friends created the Podcast in the hope that we’d inspire people to seek knowledge and better themselves in an entertaining way. We currently have over 45 episodes and over 30,000 listens.</h4>
                   <h4>We created it under an independent media brand called Inspyre Entertainment in the hope that we can come together as a group of creatives to create content which would inspire people young and old.</h4>
 								</div>
 							</section>
