--- a/product-branding.html
+++ b/product-branding.html
@@ -43,7 +43,7 @@
 									<header class="major">
 										<h1>Product Branding</h1>
 									</header>
-									<h3>Custom branding pieces i created for the Nike Adapt BB shoe launch.</h3>
+									<h3>Custom branding pieces I created for the Nike Adapt BB shoe launch.</h3>
                   <h3>I thoroughly enjoyed working on these and would be delighted to assist you in refreshing the look of your brand.</h3>
                   <!-- <span class="image main">
                     <video height="500" width="700"> <source src="images/pb/nike-vid.mp4" type="video/mp4"> </video>
