--- a/About-me.html
+++ b/About-me.html
@@ -40,11 +40,18 @@
 							<header class="major">
 								<h1>About me</h1>
 							</header>
-							<div class="content">
-								<p>I am a graphic designer and visual editor who loves a good story and values making the client journey as enjoyable as possible.
-                  I specialise in Book Covers, Visual Branding, Posters, Sports edits and Visual Art.</p>
-                  <p>  I also founded, co-host and edit the audio and visuals of the Inspyre Reads Podcast - A Podcast dedicated to inspiring growth and self development by reading a book a week and researching the themes around the books and holding group discussions during the podcast</p>
-															</div>
+							<div class="row gtr-50 gtr-uniform">
+								<div class="col-8">
+									<!-- <div class="content"> -->
+										<p>I am a graphic designer and visual editor who loves a good story and values making the client journey as enjoyable as possible.
+											I specialise in Book Covers, Visual Branding, Posters, Sports edits and Visual Art.</p>
+										<p>I also founded, co-host and edit the audio and visuals of the Inspyre Reads Podcast - A Podcast dedicated to inspiring growth and self development by reading a book a week and researching the themes around the books and holding group discussions during the podcast</p>
+									<!-- </div> -->
+								</div>
+								<div class="col-4">
+										<img width=100% height=auto src="images/me.png" alt="" />
+								</div>
+							</div>
 						</div>
 					</section>
 
