Update about-me text structure

--- a/About-me.html
+++ b/About-me.html
@@ -43,9 +43,9 @@
 							<div class="row gtr-50 gtr-uniform">
 								<div class="col-8">
 									<!-- <div class="content"> -->
-										<p>I am a graphic designer and visual editor who loves a good story and values making the client journey as enjoyable as possible.
-											I specialise in Book Covers, Visual Branding, Posters, Sports edits and Visual Art.</p>
-										<p>I also founded, co-host and edit the audio and visuals of the Inspyre Reads Podcast - A Podcast dedicated to inspiring growth and self development by reading a book a week and researching the themes around the books and holding group discussions during the podcast</p>
+										<p>I'm a graphic designer and visual editor who loves a good story and values making the client journey as enjoyable as possible.</p>
+										<p>	I specialise in Visual Art, Visual Branding Book Covers, Posters and Sports edits.</p>
+										<p>I also founded, co-host and edit the Inspyre Reads Podcast - A Podcast dedicated to inspiring growth and self development.</p>
 									<!-- </div> -->
 								</div>
 								<div class="col-4">
