Updated site with logo and branding page
Updated site with ogo and branding page

-Added logo page
-Updated all menus

--- a/Logos-and-branding.html
+++ b/Logos-and-branding.html
@@ -1,7 +1,12 @@
-<!DOCTYPE HTML>
+	<!DOCTYPE HTML>
+<!--
+	Forty by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 	<head>
-		<title>Sports Edits | mivisuals</title>
+		<title>Logos and Branding | MIVISUALS</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -40,24 +45,45 @@
 
 						<!-- One -->
 							<section id="one">
-								<div class="inner" style="padding-top: 1em !important; padding-bottom:1em;">
+								<div class="inner">
 									<header class="major">
-										<h1>Sports Edits</h1>
+										<h1>Logos and Branding</h1>
 									</header>
-									<h4 style="margin-top:-15px;">I went in the direction of a trading card style for these NBA 2019 All-Star edits to emphasise the phenomenal ability of these incredible athletes.</h4 style="margin-top: -15px;">
-                  <div class="box alt">
-                    <div class="row gtr-50 gtr-uniform">
-                      <div class="col-4">
-                        <span class="image fit"><img src="images/se/lj.png" alt="" /></span>
-                      </div>
-                      <div class="col-4">
-                        <span class="image fit"><img src="images/se/lvsg.png" alt="" /></span>
-                      </div>
-                      <div class="col-4">
-                        <span class="image fit"><img src="images/se/ga.png" alt="" /></span>
-                      </div>
-                    </div>
-                  </div>
+                  <h3>Logos and business cards designed for a variety of clients.</h3>
+									<div class="box alt">
+										<div class="row gtr-50 gtr-uniform">
+											<div class="col-4">
+												<span class="image fit"><img src="images/Logos-and-business-cards/MIVBC.png" alt="" /></span>
+												<!-- <p>I created this piece to be something that would calm a viewer down just by looking at it.</p> -->
+												<!-- <span/> -->
+											</div>
+											<div class="col-4">
+												<span class="image fit"><img src="images/Logos-and-business-cards/PRL.png" alt="" /></span>
+												<!-- <p>Take a break every now and then or you’ll be consumed by your on screen persona.</p> -->
+												<!-- <span/> -->
+											</div>
+											<div class="col-4">
+												<span class="image fit"><img src="images/Logos-and-business-cards/RIVA.png" alt="" /></span>
+												<!-- <p>Honour is not something to be forgotten. An edit designed for a friend of mine.</p> -->
+												<!-- <span/> -->
+											</div>
+											<div class="col-4">
+												<span class="image fit"><img src="images/Logos-and-business-cards/RJ.png" alt="" /></span>
+												<!-- <p>I created this piece to be something that would calm a viewer down just by looking at it.</p> -->
+												<!-- <span/> -->
+											</div>
+											<div class="col-4">
+												<span class="image fit"><img src="images/Logos-and-business-cards/TXC.png" alt="" /></span>
+												<!-- <p>Take a break every now and then or you’ll be consumed by your on screen persona.</p> -->
+												<!-- <span/> -->
+											</div>
+											<div class="col-4">
+												<span class="image fit"><img src="images/Logos-and-business-cards/YV.png" alt="" /></span>
+												<!-- <p>Honour is not something to be forgotten. An edit designed for a friend of mine.</p> -->
+												<!-- <span/> -->
+											</div>
+										</div>
+									</div>
 								</div>
 							</section>
 
@@ -65,10 +91,11 @@
 
 					<section id="contact">
 						<div class="inner">
-								<section style="width:100%; border:none; padding-top: 1em !important; padding-bottom:1em;">
+								<section style="width:100%; border:none;">
 									<div class="contact-method">
 										<h3>Contact Me</h3>
 									</div>
+
 									<ul class="icons">
 										<li><a href="https://twitter.com/MIVisuals" target="_blank" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 										<!-- <li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li> -->
@@ -80,6 +107,8 @@
 								</section>
 						</div>
 					</section>
+
+
 			</div>
 
 		<!-- Scripts -->
