--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
+							<li><a href="Logos-and-branding.html">Logos and Branding</a></li>
 							<li><a href="visual-art.html">Visual Art</a></li>
 							<li><a href="product-branding.html">Product Branding</a></li>
 							<li><a href="book-covers.html">Book Covers</a></li>
@@ -31,7 +32,7 @@
 							<li><a href="podcast.html">Podcast</a></li>
 							<li><a href="About-me.html">About me</a></li>
 							<li><a href="Contact-me.html">Contact me</a></li>
-						</ul>
+							</ul>
 					</nav>
 
 				<!-- Banner -->
@@ -61,6 +62,15 @@
 									<header class="major">
 										<h3><a href="visual-art.html" class="link">Visual Art</a></h3>
 										<p>Artwork created with a message behind it</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/Logos-and-business-cards/MIVBC.png" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="Logos-and-branding.html" class="link">Logos and Branding</a></h3>
+										<p>Logo branding projects I've designed</p>
 									</header>
 								</article>
 								<article class="product-branding">
